<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints="0"
            android:ems="10"
            android:hint="@string/enter_a_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints="0"
            android:ems="10"
            android:hint="@string/enter_a_number"
            android:inputType="number" />

        <Button
            android:id="@+id/sum_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sum" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/result"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#673AB7" />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints=" "
            android:ems="10"
            android:hint="@string/enter_a_text"
            android:inputType="text" />

        <Button
            android:id="@+id/button_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#673AB7" />

        <EditText
            android:id="@+id/x_acc"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints="0"
            android:ems="10"
            android:hint="@string/x"
            android:inputType="number" />

        <EditText
            android:id="@+id/y_acc"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints="0"
            android:ems="10"
            android:hint="@string/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/z_acc"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints="0"
            android:ems="10"
            android:hint="@string/z"
            android:inputType="number" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>