<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:text="@string/posicao_alterada" />

        <EditText
            android:id="@+id/x_acc"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints="0"
            android:ems="10"
            android:hint="@string/x"
            android:inputType="number" />

        <EditText
            android:id="@+id/y_acc"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints="0"
            android:ems="10"
            android:hint="@string/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/z_acc"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints="0"
            android:ems="10"
            android:hint="@string/z"
            android:inputType="number" />
    </LinearLayout>

</FrameLayout>